@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

'left to right direction

skinparam classAttributeIconSize 0

hide circle
hide methods

'title Domain Model

'class Platform {
'  -description
'}

class Agent {
    citizenCard
    taxNumber
    address
    phoneNumber
    agency
}



class Announcement {
    status
    date

}



class Commission {
    commissionValue
}

class Property {
     id
     area
     distance_from_the_city_centre
     price
     photographs
     TypeofBusiness

}

class Location{
    street
    zipCode
    doorNumber
}
class City{
    cityName
}

class District{
    districtName

}
class State{
    stateName
}
class Client{
        name
        email
        cCNumber
        address
        phoneNumber
}

class Visit{
    date
    beginHour
    endHour
}

class VisitDescription{
    opinionAboutDeal
    classification
}



Client "1" -- "*" Visit: request >
Agent "1" -- "*" Visit: register >
Visit "1" -- "1" Announcement: associated >
Visit "1" -- "1" VisitDescription: it has >
Announcement "1" -- "1" Property: contains >
Agent "1" -- "*" Announcement: publish >
Announcement"1" - "1" Commission: it has >
Property "1" - "1"Location: it has >
Location "1" - "1" City: contains >
City "1" - "1" District: contains >
District "1" - "1" State: contains >






@enduml